--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h1>Quote Button</h1>
-  <button id="btn">Get a quote</button>
+  <button id="btn">Get a new quote</button>
   <div id="quote">Click the button to fetch a quote.</div>
   <div class="muted" id="status"></div>
 
